# sqlalchemy-vectorstores

./: .gitignore  README.md  example.py  pyproject.toml
sqlalchemy_vectorstores/: __init__.py  prebuilt.py
sqlalchemy_vectorstores/databases/: __init__.py  base.py  base_async.py  postgres.py  postgres_async.py  sa_types.py  sqlite.py  sqlite_async.py
sqlalchemy_vectorstores/retrievers/: base.py
sqlalchemy_vectorstores/tokenizers/: __init__.py  base.py  jieba_tokenize.py
sqlalchemy_vectorstores/vectorstores/: __init__.py  base.py  base_async.py  postgres.py  postgres_async.py  sqlite.py  sqlite_async.py  utils.py
tests/: test_jieba_tokenize.py  test_postgres.py  test_postgres_async.py  test_sqlite.py  test_sqlite_async.py
