[tool.poetry]
name = "sqlalchemy-vectorstores"
version = "0.1.3.post1"
description = "a vectorstore supports vector & bm25 search using sqlite or postgresql"
authors = ["liunux4odoo <liunux@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.extras]
sqlite = ["sqlite-vec", "sqlitefts"]
asqlite = ["sqlite-vec", "sqlitefts", "aiosqlite"]
postgres = ["pgvector", "psycopg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
